# SPL-compiler

./: .gitignore  README.md  SPL.cabal  hi.ssm  ouptut  output copy.ssm  output.ssm  test.ssm
.devcontainer/: Dockerfile  devcontainer.json
app/: Main.hs  Printer.hs  Utils.hs
app/Parser/: AST.hs  Decl.hs  Expr.hs  Lexer.hs  Literal.hs  Parser.hs  Program.hs  Stmt.hs  Type.hs
app/Test/: Printer.hs  Test.hs
app/Test/Parser/: AST.hs  Decl.hs  Expr.hs  Lexer.hs  Literal.hs  Parser.hs  Program.hs  Stmt.hs  Type.hs
app/judgement/: a_bit_of_everything.spl
examples/: a_bit_of_everything.spl  absolute.spl  arg_fundecl_duplicate.spl  badcons.spl  badrec.spl  badrec1.spl  badreturn.spl  binop.spl  bools.spl  brainfuck.spl  compare.spl  compare_list.spl  consconscons.spl  dead.spl  exprStmtopti.spl  f.spl  fac.spl  fib.spl  fib_ugly.spl  fib_ugly_comments.spl  field.spl  fieldassign.spl  funcalls.spl  funvardecl_argstest.spl  funvardecl_argstestglobal.spl  funvardecltest.spl  globals.spl  globaltest.spl  globalvars.spl  good_recursion.spl  hangman.spl  hardeq.spl  hello.spl  hello2.spl  helloworld.spl  hi.spl  hoi.spl  id.spl  identity.spl  if.spl  (+33 more)
examples/errors/: cons.spl  cons2.spl  defined.spl  defined2.spl  defined4.spl  empty_function.spl  empty_string.spl  gt.spl  invalid_return1.spl  invalid_return2.spl  invretty.spl  main_with_args.spl  much.spl  no_main.spl  out_of_bounds.spl  returns3.spl  returns4.spl  returns5.spl  returns6.spl  too_large.spl  unif.spl  unify.spl  unify_suggest.spl
examples/tests/: 2D.spl  3D.spl  Example.spl  SumProduct.spl  a_bit_of_everything.spl  arguments.spl  assignment_to_builtin.spl  bool.spl  brainfuck.spl  comment.spl  constants_corner_cases_compiler.spl  cyclic.spl  higher_order_functions.spl  identity.spl  infinite_type_shouldfail.spl  list.spl  list_ops.spl  lists.spl  many_parenthesis.spl  monomorph.spl  more_parenthesis.spl  multiple_recursion.spl  op.spl  polymorphic_value_indirect_shouldfail.spl  polymorphic_value_shouldfail.spl  problematic.spl  problematic_programs.spl  recursion.spl  return_ill_typed.spl  return_in_all_code_paths.spl  return_well_typed.spl  self_application_shouldfail.spl  shadow.spl  sieve.spl  stress.spl  stress_test.spl  sum.spl  too_general_function_type.spl  unary_minus.spl  unbalanced_parenthesis.spl  (+4 more)
examples/warning/: deadcode.spl  deadcode_if.spl  deadcode_nested_if.spl  polly.spl  runtime.spl
report/: Makefile  notes  notes.md  references.bib  report.md  report.tex  template.tex  todo.md
report/presentation/: Makefile  presentation.tex  ru.sty
report/presentation/figures/: compiler_phases.drawio  compiler_phases_highlighted.drawio  parser_combinator.drawio
src/SPL/: AST.hs  Appends.hs  ArgParse.hs  Colors.hs  Optimizer.hs  Parser.hs  Preprocess.hs  PrettyPrint.hs  Printer.hs  Return.hs  State.hs  Typechecker.hs  Typechecker2.hs  Typechecker3.hs  extensions.md  todo.md
src/SPL/Codegen/: Codegen.hs  GenSSM.hs  GenWASM.hs  SSM.hs  WASM.hs
src/SPL/Parser/: AST.hs  Decl.hs  Expr.hs  Lexer.hs  Parser.hs  Program.hs  SourceSpan.hs  Stmt.hs  Type.hs
ssm/: HELP.md  README.md  changes.html  output.ssm  ssm.sh
ssm/tests/: parsehex.ssm
tests/: Main.hs
tests/Test/Parser/: DeclSpec.hs  ExprSpec.hs  LexerSpec.hs  ParserSpec.hs  ProgramSpec.hs  StmtSpec.hs  TypeSpec.hs
