cabal-version:      3.0
name:               SPL
version:            0.1.0.0
synopsis:           A compiler for SPL (Simple Programming Language) for the 2023-2024 course Compiler Construction (NWI-IMC004)
license:            NONE
author:             Quinten Cabo <quinten.cabo@ru.nl>, Marijn van Wezel <marijnvanwezel@ru.nl>
build-type:         Simple

common warnings
    ghc-options: -Wall

executable SPL
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Parser.AST
        Parser.Literal
        Parser.Parser
        Test.Parser.Literal
        Test.Parser.Parser
        Test.Test
    build-depends:    base ^>=4.17.2.1,
                      hspec ^>=2.11.7,
                      hspec-megaparsec ^>= 2.2.1,
                      megaparsec ^>=9.6.1,
                      text ^>=2.1
    hs-source-dirs:   app
    default-language: Haskell2010
