cabal-version:      3.0
name:               SPL
version:            0.1.0.0
synopsis:           A compiler for SPL (Simple Programming Language) for the 2023-2024 course Compiler Construction (NWI-IMC004)
license:            NONE
author:             Quinten Cabo <quinten.cabo@ru.nl>, Marijn van Wezel <marijn.vanwezel@ru.nl>
build-type:         Simple

common warnings
    ghc-options: -Wall

executable spl-exe
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base ^>=4.17.2.1,
                      text ^>=2.0,
                      spl-lib
    default-language: Haskell2010

library spl-lib
    import:           warnings
    exposed-modules:
        SPL.Parser
        SPL.Parser.AST
        SPL.Parser.Decl
        SPL.Parser.Expr
        SPL.Parser.Lexer
        SPL.Parser.Parser
        SPL.Parser.Type
        SPL.Parser.Stmt
        SPL.Parser.Program
        SPL.Printer
        SPL.Typechecker
        SPL.Typechecker2
    build-depends:    base ^>=4.17.2.1,
                      megaparsec,
                      containers,
                      parser-combinators ^>= 1.3.0,
                      mtl ^>= 2.2.2,
                      text ^>=2.0,
                      pretty ^>= 1.1.3.6
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:
        Test.Parser.DeclSpec
        Test.Parser.ExprSpec
        Test.Parser.LexerSpec
        Test.Parser.ParserSpec
        Test.Parser.ProgramSpec
        Test.Parser.StmtSpec
        Test.Parser.TypeSpec
    build-depends:    base ^>=4.17.2.1,
                      hspec ^>=2.11.7,
                      hspec-megaparsec ^>= 2.2.1,
                      megaparsec,
                      containers,
                      mtl ^>= 2.2.2,
                      parser-combinators ^>= 1.3.0,
                      text ^>=2.0,
                      pretty ^>= 1.1.3.6,
                      spl-lib
    hs-source-dirs:   tests
    default-language: Haskell2010

